fixed quality gate and issues down to 17 from 160 and code coverage to 83%