@@ -1,20 +1,24 @@
 package fontys.demo.business;
 
-import fontys.demo.Domain.*;
-import fontys.demo.Persistence.Entity.ExerciseEntity;
-import fontys.demo.Persistence.impl.ExerciseJPARepository;
-import fontys.demo.business.Exceptions.ExerciseNotFoundException;
-import fontys.demo.business.Interfaces.ExerciseManager;
+import fontys.demo.business.exceptions.ExerciseNotFoundException;
+import fontys.demo.business.interfaces.ExerciseManager;
+import fontys.demo.domain.CreateExerciseRequest;
+import fontys.demo.domain.CreateExerciseResponse;
+import fontys.demo.domain.Exercise;
+import fontys.demo.domain.UpdateExerciseRequest;
+import fontys.demo.persistence.entity.ExerciseEntity;
+import fontys.demo.persistence.impl.ExerciseJPARepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class ExerciseService implements ExerciseManager {
+
+    private static final String EXERCISE_NOT_FOUND_MSG = "Exercise not found with ID: ";
 
     private final ExerciseJPARepository exerciseRepository;
 
@@ -22,7 +26,7 @@ public class ExerciseService implements ExerciseManager {
     public Exercise getExercise(Long id) {
         Optional<ExerciseEntity> optionalExerciseEntity = exerciseRepository.findById(id);
         return optionalExerciseEntity.map(ExerciseConverter::convert)
-                .orElseThrow(() -> new ExerciseNotFoundException("Exercise not found with ID: " + id));
+                .orElseThrow(() -> new ExerciseNotFoundException(EXERCISE_NOT_FOUND_MSG + id));
     }
 
     @Override
@@ -30,7 +34,7 @@ public class ExerciseService implements ExerciseManager {
         List<ExerciseEntity> exerciseEntities = exerciseRepository.findAll();
         return exerciseEntities.stream()
                 .map(ExerciseConverter::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -56,7 +60,7 @@ public class ExerciseService implements ExerciseManager {
     @Override
     public void updateExercise(Long id, UpdateExerciseRequest request) {
         ExerciseEntity exerciseEntity = exerciseRepository.findById(id)
-                .orElseThrow(() -> new ExerciseNotFoundException("Exercise not found with ID: " + id));
+                .orElseThrow(() -> new ExerciseNotFoundException(EXERCISE_NOT_FOUND_MSG + id));
 
         exerciseEntity.setName(request.getName());
         exerciseEntity.setDescription(request.getDescription());
@@ -69,7 +73,7 @@ public class ExerciseService implements ExerciseManager {
     @Override
     public void deleteExercise(Long id) {
         if (!exerciseRepository.existsById(id)) {
-            throw new ExerciseNotFoundException("Exercise not found with ID: " + id);
+            throw new ExerciseNotFoundException(EXERCISE_NOT_FOUND_MSG + id);
         }
         exerciseRepository.deleteById(id);
     }
